# membrain

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  prd.md  pyproject.toml
.github/workflows/: ci.yml
ImplementationDocumentation/: API-Reference.md  BiCameralMemory.md  FlyHash.md  README.md
bench/: README.md  __init__.py  bench_cleanup.py  bench_noise.py  datasets.py  metrics.py  protocol.py
bench/baselines/: __init__.py  cosine.py  faiss_flat.py  membrain_client.py
benchmarks/: 2026-02-02-baseline-clustered.csv  2026-02-02-baseline-clustered.json  2026-02-02-baseline-full.csv  2026-02-02-baseline.csv  2026-02-02-baseline.json  BENCHMARK_LOG.md
docker/: .env.example  Dockerfile  docker-compose.bench.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  BiCameralMemory.md  CLI.md  FlyHash.md  PRODUCT_VISION.md  README.md  config.md  gRPC-Server.md
features/: 01-grpc-a2a-interface.md  02-flyhash-encoder.md  03-neuromorphic-core.md  04-lava-process-integration.md  05-config-system.md  06-flyhash-optimization.md  07-healthcheck.md  07-stochastic-consolidation.md  08-docker-compose.md  08-stochastic-consolidation.md  09-benchmarks.md  09-docker-compose.md  10-attractor-dynamics.md  10-structured-logging.md  11-attractor-dynamics-minsky.md  11-attractor-dynamics.md  11-temporal-binding.md  12-persistence.md  12-temporal-binding.md  13-persistence.md  14-lava-process-integration.md  15-noise-robust-recall.md  16-pes-decoder-adaptation.md  README.md
protos/: memory_a2a.proto
research/: DMP-SNN.md  QUARK.md  SpikingAssociativeMemory.md  SpikingJelly.md
specs/: PR-004-config-system.md  PR-005-flyhash-memory-optimization.md  PR-006-consolidate-healthcheck.md  PR-007-docker-compose.md  PR-008-integration-benchmarks.md  PR-009-attractor-dynamics.md  PR-010-temporal-binding.md  PR-011-persistence.md  README.md
src/membrain/: __init__.py  attractor.py  cli.py  config.py  core.py  encoder.py  health_check.py  interceptors.py  logging.py  nengo_attractor.py  server.py
src/membrain/proto/: __init__.py  memory_a2a_pb2.py  memory_a2a_pb2_grpc.py
tests/: conftest.py  test_attractor.py  test_config.py  test_consolidation.py  test_core.py  test_flyhash.py  test_grpc_server.py  test_health_check.py  test_logging.py  test_nengo_attractor.py  test_neuromorphic_core.py  test_pes_adaptation.py
tests/bench/: __init__.py  test_datasets.py  test_faiss.py  test_membrain_client.py  test_protocol.py
tests/integration/: test_bench_runner.py
